log
Thu 05 Oct 2023 06:56:50 PM UTC: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|5
total_score: 5/70
df157b5
Thu 05 Oct 2023 06:57:25 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
523d10f
Thu 05 Oct 2023 07:02:39 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
a6d6c13
Thu 05 Oct 2023 07:02:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
92fd8fd
Thu 05 Oct 2023 07:03:06 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7b6f782
Thu 05 Oct 2023 07:07:36 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
842dfde
Thu 05 Oct 2023 07:10:09 PM UTC: 
 sudoku.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
a6d5576
Thu 05 Oct 2023 07:13:14 PM UTC: 
 sudoku.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
8ba8fdc
Thu 05 Oct 2023 07:17:05 PM UTC: 
 sudoku.c | 28 ++++++----------------------
 1 file changed, 6 insertions(+), 22 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
30f122f
Thu 05 Oct 2023 07:17:23 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:83:1: error: control reaches end of non-void function [-Werror=return-type]
   83 | }
      | ^
At top level:
sudoku.c:47:9: error: ‘is_valid’ defined but not used [-Werror=unused-function]
   47 |     int is_valid(Node* n) {
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a5cd0c9
Thu 05 Oct 2023 07:17:47 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
4cb5814
Thu 05 Oct 2023 07:19:46 PM UTC: 
 sudoku.c | 27 ++++++++++++++++-----------
 1 file changed, 16 insertions(+), 11 deletions(-)
 tests:  0|5
total_score: 0/70
5c9db14
Thu 05 Oct 2023 07:20:43 PM UTC: 
 sudoku.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
506c559
Thu 05 Oct 2023 07:31:04 PM UTC: 
 sudoku.c | 71 ++++++++++++++++++++++++++++++++++++++++++++++++----------------
 1 file changed, 53 insertions(+), 18 deletions(-)
 tests:  0|0
bd1fa8d
Thu 05 Oct 2023 07:36:59 PM UTC: 
 sudoku.c | 45 ++++++++++++++++++++++++++++-----------------
 1 file changed, 28 insertions(+), 17 deletions(-)
 tests:  5|3
total_score: 35/70
cb0e725
Thu 05 Oct 2023 07:38:39 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
0c68e70
Sun 08 Oct 2023 05:27:35 PM UTC: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 55/70
bc65733
